...
    <string name="rebecka_light_theme">Rebecka Light Theme</string>
    <string name="rebecka_dark_theme">Rebecka Dark Theme</string>
    <string name="select_language">Select language</string>
    <string name="settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="add_note_input">Add note</string>
    <string name="add_button">Add</string>
    <string name="select_theme">Select theme</string>

    <string name="sort">Sort</string>
    <string name="sort_created_at_desc">Created At (Newest First)</string>
    <string name="sort_created_at_asc">Created At (Oldest First)</string>
    <string name="sort_title_a_z">Title (A-Z)</string>
...
    <string name="filter_all">All</string>
    <string name="filter_today">Today</string>
    <string name="filter_this_week">This Week</string>
    <string name="filter_this_month">This Month</string>
    <string name="add_group_button_description">Add group</string>
    <string name="add_group_button_title">Add</string>
    <string name="button_cancel_text">Cancel</string>
    <string name="add_group_header_title">New group</string>
    <string name="add_group_input_placeholder">Group name</string>
    <string name="filter_notification_time_header">Notification time</string>
    <string name="filter_notification_time_unfiltered">Unfiltered</string>
    <string name="sort_notification_time_desc">Notification time (Newest first)</string>
    <string name="sort_notification_time_asc">Notification time (Oldest first)</string>
...
